# crypto-futures-dashboard

./: .env  .env.example  ETHUSDT_1m_90d_trades.csv  README.md  backtest_equity.csv  backtest_results_ethusdt_15m_3mo_degraded_oi.csv  backtest_results_ethusdt_15m_improved.csv  backtest_trades.csv  bt_equity.csv  bt_trades.csv  ecc_ethusdt_equity_curve_30d.csv  ecc_ethusdt_equity_curve_90d_degraded.csv  ecc_ethusdt_equity_curve_full.csv  ecc_ethusdt_trades_30d.csv  ecc_ethusdt_trades_full.csv  equity_curve.csv  liq_bt_equity.csv  liq_bt_trades.csv  liq_v2_equity.csv  liq_v2_trades.csv  liq_v3_equity.csv  liq_v3_trades.csv  liq_v4_equity.csv  liq_v4_trades.csv  pyproject.toml  trades.csv
scripts/: backfill.py  backtest.py  backtest_2.py  breakout.py  liq-backtest.py  run_dashboard.sh  run_realtime.py
src/perp_intel/: config.py  log.py
src/perp_intel/binance/: rest.py  symbols.py  ws.py
src/perp_intel/charting/: charts.py
src/perp_intel/dashboard/: app.py  live_app.py  live_app_breakout.py  live_app_liquid_engine.py
src/perp_intel/features/: basis.py  funding.py  open_interest.py
src/perp_intel/pipelines/: backfill.py  realtime.py
src/perp_intel/storage/: duckdb_store.py  schema.py
